fix: HGSW-89: applying secondary bg contrast color to color in modals

--- a/packages/facets/src/components/CVWModalManager/GlobalModal.scss
+++ b/packages/facets/src/components/CVWModalManager/GlobalModal.scss
@@ -33,7 +33,7 @@
       }
       &.primary {
         background-color: var(getThemeColor('secondaryBg'));
-        color: var(getThemeColor('light.lightest.contrast'));
+        color: var(getThemeColor('secondaryBg.contrast'));
       }
       &.secondary {
 
